--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,5 @@
 <HTML>
   <head>INdex in LocalTestRepository</head>
   <body>This is body text</body>
+  <div>Now is the time for all good men</div>
 </HTML>
